# hasteless

./: .gitignore  .prettierrc.json  Cargo.toml  LICENSE  README.md  flake.nix  package.json  shell.nix  toolchain.toml  wrangler.toml
.github/workflows/: deploy.yml
.wrangler/tmp/bundle-YC5iF1/: middleware-insertion-facade.js  middleware-loader.entry.ts
.wrangler/tmp/dev-VeQxL3/: 1d35c3350c139e6fa3b5e1244566fe548a7dabac-index.wasm  shim.js  shim.js.map
src/: lib.rs
src/haste/: assets.rs  mod.rs  utils.rs
src/static/: index.html
