[package]
name = "hasteless"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
bip39 = "2.0.0"
lazy_static = "1.4.0"
worker = "0.0.15"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0.96"
serde = "1.0.163"
chrono = "0.4.24"

[profile.release]
lto = true
strip = true
codegen-units = 1
